--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Andy Jhoao <andy_joao@live.com>",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
