--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
+    "node-pre-gyp": "0.12.0",
     "eslint-plugin-vue": "^5.0.0"
   },
   "description": "## Project setup ``` npm install ```",
