--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "node-sass": "^4.14.1",
     "vue": "^2.6.10",
     "vue-loading-spinner": "^1.0.11",
     "vue-router": "^3.0.3",
@@ -22,8 +23,8 @@
     "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
-    "node-pre-gyp": "0.12.0",
-    "eslint-plugin-vue": "^5.0.0"
+    "eslint-plugin-vue": "^5.0.0",
+    "node-pre-gyp": "0.12.0"
   },
   "description": "## Project setup ``` npm install ```",
   "main": ".eslintrc.js",
